--- a/style.css
+++ b/style.css
@@ -11,13 +11,17 @@
   .container {
     max-width: 1440px;
     margin: 0 auto;
+    
   }
 
  body {font-family: font-family: 'Signika', sans-serif;
 font-size: 18px;
 font-weight: 400;
 line-height: 1.5;
-color: #4d1423;}
+color: #4d1423;
+display: flex;
+flex-direction: column;
+justify-content: space-between;}
   
   
   .nav-menu {width: 1440px;height: 46px;}
