--- a/style.css
+++ b/style.css
@@ -1,45 +1,69 @@
 * {
-    box-sizing: border-box;
-    ;
-  }
-  
-  html {
-    scroll-behavior: smooth; 
-  }
+  box-sizing: border-box;
+  ;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 
-  .container {
-    max-width: 1440px;
-    margin: 0 auto;
-    
-  }
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
 
- body {font-family: font-family: 'Signika', sans-serif;
-font-size: 18px;
-font-weight: 400;
-line-height: 1.5;
-color: #4d1423;
-display: flex;
-flex-direction: column;
-justify-content: space-between;}
-  
-  
-  .nav-menu {width: 1440px;height: 46px;}
-  .nav-list {float: left;
-            margin: auto;}
-  
-  .nav-item {
-    list-style: none; /*убираем маркеры списка*/
-    float: left;
-    padding: 0 0 0 9px;
-    margin: 1px 2px 0 0;
-  }
-  .nav-link {text-decoration: none;} /*убираем подчеркивание текста ссылок*/
+}
 
- .img-avatar {float: left;}
-
-   
+body {
+  font-family: font-family: 'Signika', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #4d1423;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 
+.nav-menu {
+  width: 1440px;
+  height: 46px;
+}
+
+.nav-list {
+
+  padding-left: 0;
+
+}
+
+.nav-item {
+  list-style: none;
+  /*убираем маркеры списка*/
+  display: inline-block;
+  padding: 0 0 0 9px;
+  margin: 1px 2px 0 0;
+}
+
+.nav-link {
+  text-decoration: none;
+}
+
+/*убираем подчеркивание текста ссылок*/
+
+.img-avatar {
+  float: left;
+}
+
+footer {
+  height: 200px;
+}
+
+.gh-link a{display: inline-block;padding-left: 25px;}
 
 
+
+.container-footer {
+  display: flex;
+  justify-content: space-between;
+}
