--- a/style.css
+++ b/style.css
@@ -100,10 +100,12 @@ header {
   padding: 20px;
   border-radius: 15%;
 }
+
 /*#beige-col {background-color: beige;
 
   border-radius: 15%;
 padding-bottom: 30px;}*/
 
 #beige-col-1 {
-  padding-bottom: 30px;}
+  padding-bottom: 30px;
+}
